syntax = "proto3";
package models;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
// import "google/protobuf/timestamp.proto";

option go_package = "./pb";

message Step {
  string name = 1;
  string description = 2;
  repeated string variables = 3;
  string dir = 4;
  ExecutorConfig executor_config = 5;
  string cmd_with_args = 6;
  string command = 7;
  string script = 8;
  string stdout = 9;
  string stderr = 10;
  string output = 11;
  repeated string args = 12;
  repeated string depends = 13;
  ContinueOn continue_on = 14;
  RetryPolicy retry_policy = 15;
  RepeatPolicy repeat_policy = 16;
  bool mail_on_error = 17;
  repeated Condition preconditions = 18;
  string signal_on_stop = 19;
}

message ExecutorConfig {
  string type = 1;
  map<string, google.protobuf.Any> config = 2;
}
  
message ContinueOn {
  bool failure = 1;
  bool skipped = 2;
}
  
message RetryPolicy {
  int32 limit = 1;
  google.protobuf.Duration interval = 2;
}
  
message RepeatPolicy {
  bool repeat = 1;
  google.protobuf.Duration interval = 2;
}
  
message Condition {
  string condition = 1;
  string expected = 2;
}